--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
 
     <!-- Your Custom JS for the Flight Path -->
-    <script src="countries/countries.js"></script>
+    <script src="countries.js"></script>
 </body>
 </html>
